@@ -17,6 +17,8 @@ BUGFIXES
 01-05-06    Installer password was wiped doing a rebuild, now fixed (Julien Casanova)
 
 IMPROVEMENTS
+10-05-06    Some updates for gallery module, to ensure compatibility with Gallery 2.1
+            (Neil Mather)
 10-05-06    A member user is now added as part of rebuild
 09-05-06    Added request history to session, ability to return to a previously
             requested page on authorisation failure
